--- a/hearings/scratch.ipynb
+++ b/hearings/scratch.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "removed-summer",
+   "execution_count": 1,
+   "id": "approved-debate",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "No ID values were given, so all IDs in the database will be processed. Proceed y/(n)? 'y'\n"
+     "ename": "ValueError",
+     "evalue": " Improperly configured postgresql database given! Please give a database configured by\n                                 the gpo_tools.Scraper class. ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4ad50205b351>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mdb_config\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'database'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdb_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdb_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'user'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetenv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DB_POSTGRES_PW'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdb_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'host'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/mnt/c/Users/samue/Documents/hearings_lib/venv/lib/python3.8/site-packages/gpo_tools/parse.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, db, user, password, host, id_values)\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0mtable_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable_names\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'members'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hearings'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m             raise ValueError(\"\"\" Improperly configured postgresql database given! Please give a database configured by\n\u001b[0m\u001b[1;32m     42\u001b[0m                                  the gpo_tools.Scraper class. \"\"\")\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m:  Improperly configured postgresql database given! Please give a database configured by\n                                 the gpo_tools.Scraper class. "
      ]
     }
    ],
@@ -33,18 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "optimum-nebraska",
+   "execution_count": null,
+   "id": "worse-lodging",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(parser.id_values))"
    ]
@@ -52,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "sized-image",
+   "id": "eleven-passing",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "korean-chair",
+   "id": "honest-cyprus",
    "metadata": {},
    "outputs": [
     {
